--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-tilt": "^0.1.4",
+    "vanilla-tilt": "^1.7.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
