--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
 		"chart.js": "^3.5.1",
-		"react": "^17.0.2",
+		"react": "^18.3.1",
 		"react-chartjs-2": "^3.0.5",
-		"react-dom": "^17.0.2",
+		"react-dom": "^18.3.1",
 		"react-loading-skeleton": "^2.2.0",
-		"react-scripts": "4.0.3",
+		"react-scripts": "^5.0.1",
 		"react-tilt": "^0.1.4",
 		"vanilla-tilt": "^1.7.2",
 		"web-vitals": "^1.0.1"
 	},
 	"scripts": {
-		"start": "react-scripts --openssl-legacy-provider start",
+		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
